# guac_py

./: Pipfile  README.md  pyproject.toml
guac/: __init__.py  api.py  models.py  utils.py
guac/cmd/: add_group.py  add_user.py  connection.py  connection_list.py  delete_group.py  delete_user.py  group.py  group_add.py  group_create.py  group_delete.py  group_list.py  group_permissions.py  group_show.py  list_connections.py  list_groups.py  list_users.py  main.py  set_group_permissions.py  shell.py  user.py  user_add.py  user_create.py  user_delete.py  user_list.py  user_rekey.py  vm.py  vm_create.py  vm_delete.py
guac/templates/: service-int.yaml  userdata.yaml  vm.yaml
