[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "guac"
authors = [{name = "Lars Kellogg-Stedman", email = "lars@redhat.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/larsks/guac"

[project.scripts]
guac = "guac.cmd.main:main"
